fix: move to render service

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}",
+    "lint:js": "eslint srfc/**/*.{js,jsx}",
     "lintFix:js": "eslint --fix src/**/*.{js,jsx}",
     "lint-staged:fix": "git add -A & npx lint-staged **/*.js & git reset HEAD",
     "lsf": "npm run lint-staged:fix"
